--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ body {
         font-size: 33px;
         font-weight: 700; }
       .price-component .monthly-subcription .price-container .period {
-        color: #50ccce; }
+        color: #51cacd; }
     .price-component .monthly-subcription p {
       color: #e5eff5;
       margin-bottom: 25px; }
