--- a/sass/main.sass
+++ b/sass/main.sass
@@ -28,7 +28,7 @@ body
     grid-template-rows: repeat(3, auto)
     max-width: 300px
     margin: 50px auto
-    > section 
+    > div 
         padding: 1.5em
     .join-our-community
         background-color: white
